# sctp_message

./: .gitignore  Dockerfile  dockers.sh  main1.c  meson.build  nas.pcap  nas_1.pcap  setup.sh
asn1c/: meson.build
asn1c/common/: ANY.c  ANY.h  BIT_STRING.c  BIT_STRING.h  ENUMERATED.c  ENUMERATED.h  GraphicString.c  GraphicString.h  INTEGER.c  INTEGER.h  INTEGER_aper.c  INTEGER_jer.c  NULL.c  NULL.h  NULL_jer.c  NativeEnumerated.c  NativeEnumerated.h  NativeEnumerated_jer.c  NativeInteger.c  NativeInteger.h  NativeInteger_rfill.c  OBJECT_IDENTIFIER.c  OBJECT_IDENTIFIER.h  OBJECT_IDENTIFIER_jer.c  OCTET_STRING.c  OCTET_STRING.h  OPEN_TYPE.c  OPEN_TYPE.h  ObjectDescriptor.c  PrintableString.c  PrintableString.h  UTF8String.c  UTF8String.h  UTF8String_print.c  UTF8String_rfill.c  VisibleString.c  VisibleString.h  asn_config.h  asn_internal.h  constr_CHOICE.c  (+13 more)
asn1c/ngap/: NGAP_AMF-TNLAssociationSetupItem.c  NGAP_AMF-TNLAssociationSetupItem.h  NGAP_AMF-TNLAssociationSetupList.c  NGAP_AMF-TNLAssociationSetupList.h  NGAP_AMF-TNLAssociationToAddItem.c  NGAP_AMF-TNLAssociationToAddItem.h  NGAP_AMF-TNLAssociationToAddList.c  NGAP_AMF-TNLAssociationToAddList.h  NGAP_AMF-TNLAssociationToRemoveItem.c  NGAP_AMF-TNLAssociationToRemoveItem.h  NGAP_AMF-TNLAssociationToRemoveList.c  NGAP_AMF-TNLAssociationToRemoveList.h  NGAP_AMF-TNLAssociationToUpdateItem.c  NGAP_AMF-TNLAssociationToUpdateItem.h  NGAP_AMF-TNLAssociationToUpdateList.c  NGAP_AMF-TNLAssociationToUpdateList.h  NGAP_AMF-UE-NGAP-ID.c  NGAP_AMF-UE-NGAP-ID.h  NGAP_AMFCPRelocationIndication.c  NGAP_AMFCPRelocationIndication.h  NGAP_AMFConfigurationUpdate.c  NGAP_AMFConfigurationUpdate.h  NGAP_AMFConfigurationUpdateAcknowledge.c  NGAP_AMFConfigurationUpdateAcknowledge.h  NGAP_AMFConfigurationUpdateFailure.c  NGAP_AMFConfigurationUpdateFailure.h  NGAP_AMFName.c  NGAP_AMFName.h  NGAP_AMFNameUTF8String.c  NGAP_AMFNameUTF8String.h  NGAP_AMFNameVisibleString.c  NGAP_AMFNameVisibleString.h  NGAP_AMFPagingTarget.c  NGAP_AMFPagingTarget.h  NGAP_AMFPointer.c  NGAP_AMFPointer.h  NGAP_AMFRegionID.c  NGAP_AMFRegionID.h  NGAP_AMFSetID.c  NGAP_AMFSetID.h  (+2092 more)
asn1c/s1ap/: S1AP_Additional-GUTI.c  S1AP_Additional-GUTI.h  S1AP_AdditionalCSFallbackIndicator.c  S1AP_AdditionalCSFallbackIndicator.h  S1AP_AdditionalRRMPriorityIndex.c  S1AP_AdditionalRRMPriorityIndex.h  S1AP_AerialUEsubscriptionInformation.c  S1AP_AerialUEsubscriptionInformation.h  S1AP_AllocationAndRetentionPriority.c  S1AP_AllocationAndRetentionPriority.h  S1AP_AreaScopeOfMDT.c  S1AP_AreaScopeOfMDT.h  S1AP_AreaScopeOfQMC.c  S1AP_AreaScopeOfQMC.h  S1AP_AssistanceDataForCECapableUEs.c  S1AP_AssistanceDataForCECapableUEs.h  S1AP_AssistanceDataForPaging.c  S1AP_AssistanceDataForPaging.h  S1AP_AssistanceDataForRecommendedCells.c  S1AP_AssistanceDataForRecommendedCells.h  S1AP_BPLMNs.c  S1AP_BPLMNs.h  S1AP_BearerType.c  S1AP_BearerType.h  S1AP_Bearers-SubjectToEarlyStatusTransfer-Item.c  S1AP_Bearers-SubjectToEarlyStatusTransfer-Item.h  S1AP_Bearers-SubjectToEarlyStatusTransferList.c  S1AP_Bearers-SubjectToEarlyStatusTransferList.h  S1AP_Bearers-SubjectToStatusTransfer-Item.c  S1AP_Bearers-SubjectToStatusTransfer-Item.h  S1AP_Bearers-SubjectToStatusTransferList.c  S1AP_Bearers-SubjectToStatusTransferList.h  S1AP_BitRate.c  S1AP_BitRate.h  S1AP_BluetoothMeasConfig.c  S1AP_BluetoothMeasConfig.h  S1AP_BluetoothMeasConfigNameList.c  S1AP_BluetoothMeasConfigNameList.h  (+1295 more)
config/: enb.yaml  meson.build
core/: conv.c  conv.h  core.h  list.c  list.h  log.c  log.h  mempool.h  meson.build  ogs-macros.h  pkbuf.c  pkbuf.h
crypt/: curve25519-donna.c  ecc.c  ecc.h  kasumi.c  kasumi.h  meson.build  milenage.c  milenage.h  ogs-aes-cmac.c  ogs-aes-cmac.h  ogs-aes.c  ogs-aes.h  ogs-base64.c  ogs-base64.h  ogs-crypt.h  ogs-kdf.c  ogs-kdf.h  ogs-sha1-hmac.c  ogs-sha1-hmac.h  ogs-sha1.c  ogs-sha1.h  ogs-sha2-hmac.c  ogs-sha2-hmac.h  ogs-sha2.c  ogs-sha2.h  snow-3g.c  snow-3g.h  zuc.c  zuc.h
nas/: meson.build
nas/5gs/: conv.c  (+10 more)
nas/common/: conv.c  conv.h  meson.build  ogs-nas-common.h  security.c  security.h  types.c  types.h
nas/eps/: conv.c  conv.h  decoder.c  encoder.c  ies.c  ies.h  meson.build  message.h  ogs-nas-eps.h  types.c  types.h
nas/eps/support/: README.md  nas-message.py  type-list.py
nas/eps/support/cache/: nas-msg-100.py  nas-msg-104.py  nas-msg-193.py  nas-msg-195.py  nas-msg-197.py  nas-msg-199.py  nas-msg-201.py  nas-msg-202.py  nas-msg-205.py  nas-msg-206.py  nas-msg-208.py  nas-msg-209.py  nas-msg-210.py  nas-msg-212.py  nas-msg-214.py  nas-msg-218.py  nas-msg-232.py  nas-msg-65.py  nas-msg-66.py  nas-msg-67.py  nas-msg-68.py  nas-msg-69.1.py  nas-msg-69.2.py  nas-msg-70.py  nas-msg-72.py  nas-msg-73.py  nas-msg-75.py  nas-msg-76.py  nas-msg-77.1.py  nas-msg-78.py  nas-msg-80.py  nas-msg-82.py  nas-msg-83.py  nas-msg-85.py  nas-msg-86.py  nas-msg-92.py  nas-msg-93.py  nas-msg-94.py  nas-msg-96.py  nas-msg-97.py  (+1 more)
proto/: conv.c  conv.h  event.c  event.h  meson.build  ogs-proto.h  timer.c  timer.h  types.c  types.h
src/: context.c  context.h  m_yaml.c  m_yaml.h  meson.build  message.c  message.h  nas_build.c  nas_build.h  nas_security.c  nas_security.h  s1ap_build.c  s1ap_build.h  s1ap_msg_hdr.h  s1ap_path.c  s1ap_path.h  sctp.c  sctp.h  socket.c  socket.h
(+79 files in other folders)
